--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,9 @@
     <section>
         <h1>CONTACTS</h1>
         <p>You can contact me by any of given ways....</p>
-        <p>Mobile : 9303106333</p>
-        <p>Email : darshmeera990@gmail.com</p>
-        <p>Linkedin :https://www.linkedin.com/in/darsh-vishwakarma-112626237/ </p>
+        <p>Mobile : "your contact no"</p>
+        <p>Email :email address</p>
+        <p>Linkedin :linkedin profile link </p>
     </section>
 
   
